--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,15 +1,21 @@
 {
 	"type": "postgres",
 	"host": "localhost",
-	"port": 5432,
-	"username": "<your-username>",
-	"password": "<your-password>",
-	"database": "<your-database-name>",
+	"port": 5433,
+	"username": "yakym",
+	"password": "123123123",
+	"database": "auth",
 	"synchronize": true,
 	"logging": false,
-	"entities": ["src/entity/**/*.ts"],
-	"migrations": ["src/migration/**/*.ts"],
-	"subscribers": ["src/subscriber/**/*.ts"],
+	"entities": [
+		"src/entity/**/*.ts"
+	],
+	"migrations": [
+		"src/migration/**/*.ts"
+	],
+	"subscribers": [
+		"src/subscriber/**/*.ts"
+	],
 	"cli": {
 		"entitiesDir": "src/entity",
 		"migrationsDir": "src/migration",
