--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services: 
   web: 
-    image: node
+    image: yakym/express-jwt:express-jwt
     depends_on: 
       - db
     ports: 
